objects/OF_Vendibilita_Logger__c.object
<CustomObject>
    <fields>
        <fullName>OF_Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>OF_Vendibilita_Loggers</relationshipLabel>
        <relationshipName>OF_Vendibilita_Loggers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Data__c</fullName>
        <label>OF_Data</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_IdBuilding_OLO__c</fullName>
        <label>OF_IdBuilding_OLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IdRequest__c</fullName>
        <label>OF_IdRequest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Motivo__c</fullName>
        <label>OF_Motivo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_OLO__c</fullName>
        <label>OF_OLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Request__c</fullName>
        <label>OF_Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OF_Response__c</fullName>
        <label>OF_Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OF_Riferimento_Logger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OF_Vendibilita_Logger</label>
        <referenceTo>OF_Vendibilita_Logger__c</referenceTo>
        <relationshipLabel>OF_Vendibilita_Loggers</relationshipLabel>
        <relationshipName>OF_Vendibilita_Loggers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Servizio__c</fullName>
        <label>OF_Servizio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Source__c</fullName>
        <label>OF_Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da web service</fullName>
                </value>
                <value>
                    <fullName>Non da web service</fullName>
                </value>
                <value>
                    <fullName>Da NI</fullName>
                </value>
                <value>
                    <fullName>Non da NI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Response__c</fullName>
        <label>Request/Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>OF_Vendibilita_Logger</label>
    <nameField>
        <displayFormat>EVL-{0000}</displayFormat>
        <label>OF_Vendibilita_Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OF_Vendibilita_Loggers</pluralLabel>
    <recordTypes>
        <fullName>OF_Logger</fullName>
        <active>true</active>
        <label>OF_Logger</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>